# ltq-voice-tapi

./: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  configure.in  drv_tapi_version.h
doc/: doxyconfig_v3.dxy
include/: drv_tapi_autoconf.h.in  drv_tapi_config.h  drv_tapi_io.h  drv_tapi_kpi_io.h  drv_tapi_ll_interface.h  drv_tapi_qos_io.h  drv_tapi_qos_ll_interface.h  ifx_types.h  lib_fifo.h
m4/: common.m4  kernel.m4  lib_ifxos.m4  tapi.m4
src/: Makefile.am  Makefile.in  drv_tapi.h  drv_tapi_cid.c  drv_tapi_cid.h  drv_tapi_compat.c  drv_tapi_compat.h  drv_tapi_debug.c  drv_tapi_debug.h  drv_tapi_dev_io.c  drv_tapi_dial.c  drv_tapi_event.c  drv_tapi_event.h  drv_tapi_fxo.c  drv_tapi_fxo.h  drv_tapi_init.c  drv_tapi_ioctl.c  drv_tapi_ioctl.h  drv_tapi_ioctl_handlers.h  drv_tapi_kpi.c  drv_tapi_linux.c  drv_tapi_linux.h  drv_tapi_ll_if_version.h  drv_tapi_meter.c  drv_tapi_opcontrol.c  drv_tapi_osmap.h  drv_tapi_ppd.c  drv_tapi_qos.c  drv_tapi_ring.c  drv_tapi_stat.c  drv_tapi_stream.c  drv_tapi_stream.h  drv_tapi_tone.c  drv_tapi_voice.c  drv_tapi_vxworks.c
src/lib/: lib_bufferpool.c  lib_fifo.c
src/linux/: ifxos_linux_pipe_appl.c  ifxos_linux_thread_appl.c
src/os_calls/: ifx_fifo.c  ifx_fifo.h  ifxos_common.h  ifxos_copy_user_space.h  ifxos_debug.h  ifxos_event.h  ifxos_interrupt.h  ifxos_linux_copy_user_space_drv.c  ifxos_linux_event_drv.c  ifxos_linux_lock_drv.c  ifxos_linux_memory_alloc_drv.c  ifxos_linux_mutex_drv.c  ifxos_linux_select_drv.c  ifxos_linux_thread_drv.c  ifxos_linux_time_drv.c  ifxos_lock.h  ifxos_memory_alloc.h  ifxos_mutex.h  ifxos_print.h  ifxos_rt_if_check.h  ifxos_select.h  ifxos_sys_show.h  ifxos_sys_show_interface.h  ifxos_thread.h  ifxos_time.h  ifxos_version.h
src/os_calls/linux/: ifxos_linux_interrupt.h  ifxos_linux_lock.h  ifxos_linux_memory_alloc.h  ifxos_linux_mutex.h  ifxos_linux_print.h  ifxos_linux_thread.h
xml/: Makefile.in  drv_tapi_io.dtd  drv_tapi_io.xml  drv_tapi_io_handler.xsl
